--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+BOLD_API_KEY=
+BOLD_SECRET_KEY=
+BOLD_REDIRECTION_URL=https://micomercio.com/pagos/resultado
