--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,5 @@ VITE_APP_NAME="${APP_NAME}"
 BOLD_API_KEY=
 BOLD_SECRET_KEY=
 BOLD_REDIRECTION_URL=https://micomercio.com/pagos/resultado
+
+QUEUE_CONNECTION=database
