--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+MINIMUM_PTS = 3
+
 BOLD_API_KEY=
 BOLD_SECRET_KEY=
 BOLD_REDIRECTION_URL=https://micomercio.com/pagos/resultado
